objects/Risk_Management__c.object
<CustomObject>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Risks Management</relationshipLabel>
        <relationshipName>Risks_Management</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk_Dimension__c</fullName>
        <label>Risk Dimension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Ultimate Beneficial Ownership</fullName>
                </value>
                <value>
                    <fullName>Related Parties</fullName>
                </value>
                <value>
                    <fullName>Financial Details</fullName>
                </value>
                <value>
                    <fullName>Tax Details</fullName>
                </value>
                <value>
                    <fullName>Credit Details</fullName>
                </value>
                <value>
                    <fullName>Legal Details</fullName>
                </value>
                <value>
                    <fullName>Product Details</fullName>
                </value>
                <value>
                    <fullName>Location Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>IF(ISPICKVAL(Level__c,&quot;LOW&quot;),(10* Weight_Hidden__c),
IF(ISPICKVAL(Level__c,&quot;Medium&quot;),(20* Weight_Hidden__c),
IF(ISPICKVAL(Level__c,&quot;High&quot;),(30* Weight_Hidden__c),
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Hidden__c</fullName>
        <formula>Case(TEXT(Weight__c),
&quot;5%&quot;,0.05,
&quot;10%&quot;,0.10,
&quot;15%&quot;,0.15,
&quot;20%&quot;,0.20,
&quot;25%&quot;,0.25,
&quot;30%&quot;,0.30,
&quot;35%&quot;,0.35,
&quot;40%&quot;,0.40,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight Hidden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk Management</label>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>Risk Management Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Initiation_doesnt_apply_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Account Initiation&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_in_progress_not_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Application in progress&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_Validation_doesnt_apply_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Initial Validation&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manager_Review_doesnt_apply_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Manager Review&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Onsite_Interview_doesnt_apply_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Onsite Interview&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Interview_doesnt_apply_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Phone Interview&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejected_doesnt_apply_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Rejected&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_Credit_Details</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Credit check (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Credit Details&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_Financial_Details</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Financial check (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Financial Details&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_Legal_Details</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Legal check (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Legal Details&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_Location_Details</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Location check (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Location Details&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_Product_Details</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Product check (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Product Details&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_Related_Parties</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Related Parties (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Related Parties&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_Tax_Details</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Tax check (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Tax Details&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_Equals_UBO</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;UBO/signer/officials check (S)&quot;, 
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Ultimate Beneficial Ownership&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Dimension_equals_Regulatory</fullName>
        <active>true</active>
        <description>This rule validates the opportunity stage in order to match the risk dimension</description>
        <errorConditionFormula>AND(Opportunity_Stage__c = &quot;Regulatory&quot;,
NOT(ISPICKVAL( Risk_Dimension__c,&quot;Regulatory&quot;) 
))</errorConditionFormula>
        <errorMessage>Risk Dimension must match the Opportunity Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Score_Calculation_doesnt_apply_RiskDim</fullName>
        <active>true</active>
        <description>This rule will trigger to prevent users from when creating a risk dimension that does not have a stage associated with it</description>
        <errorConditionFormula>AND( Opportunity_Stage__c = &quot;Score Calculation&quot;,
NOT(ISBLANK(TEXT( Risk_Dimension__c))))</errorConditionFormula>
        <errorMessage>You can&apos;t create a risk dimension in this stage of the opportunity</errorMessage>
    </validationRules>
</CustomObject>